# ReviewForge

./: .dockerignore  .env.example  .gitignore  .gitkeep  .trigger  AGENTS.md  CLAUDE.md  Dockerfile  Gemfile  HANDOFF.md  README.md  docker-compose.yml  pr42_comments.json  pr_comments.json  pr_comments2.json  requirements.txt  reviewforge.yaml
backend/: pyproject.toml
backend/eval/: golden_expected_findings.json
backend/scripts/: eval_agentic.py  eval_gauntlet.py  eval_live_benchmark.py  eval_precision.py  eval_precision_result.json  eval_result.json  probe_tool_calling.py
backend/src/reviewforge/: __init__.py  app.py  cli.py  test_calibration.py  test_comprehensive.py  test_comprehensive_api.py  test_patch_verify.py  test_sample.py  test_security_bypass.py  test_vulnerable.py
backend/src/reviewforge/api/: admin.py  dashboard.py  webhook.py
backend/src/reviewforge/core/: auth.py  config.py  custom_store.py  database.py  events.py  loop_detector.py  scheduler.py  specs.py  state.py
backend/src/reviewforge/cross_pr_test/: __init__.py  api_endpoints.py  api_routes.py  data_utils.py  handlers.py
backend/src/reviewforge/engine/: budget.py  calibrator.py  context_engine.py  coverage_gap.py  coverage_ledger.py  cross_pr_analyzer.py  escalation.py  evidence_verifier.py  finding_anchors.py  generic_reviewer.py  mock_llm.py  model_router.py  orchestrator.py  phase0.py  planner.py  plugin_loader.py  prompt.py  reviewers.py  security_categories.py  semantic_diff.py  symbol_extractor.py  token_tracker.py  verifier.py  wiki_compiler.py
backend/src/reviewforge/engine/detectors/: __init__.py  accessibility.py  advisories.py  base.py  dependency.py  quality.py  security.py  unified_diff.py
backend/src/reviewforge/eval/: __init__.py  gauntlet.py  live_benchmark.py
backend/src/reviewforge/plugins/: __init__.py  example_reviewer.py
backend/src/reviewforge/skills/: loader.py
backend/src/reviewforge/skills/angular_patterns/: SKILL.md
backend/src/reviewforge/tools/: gateway.py  github_api.py  mock_github.py
backend/src/reviewforge/utils/: cache_handler.py  cache_utils.py
backend/tests/: test_accessibility_detector.py  test_agentic_loop.py  test_agentic_routing.py  test_app_security.py  test_calibrator.py  test_comment_batch_delivery.py  test_config_paths.py  test_console_admin.py  test_context_engine.py  test_coverage_gap.py  test_coverage_ledger.py  test_cross_pr_precision.py  test_dashboard_dedup.py  test_dependency_advisories.py  test_detectors.py  test_escalation.py  test_escalation_integration.py  test_eval_gauntlet.py  test_evidence_verifier.py  test_finding_anchors.py  test_finding_cap.py  test_github_batch_reviews.py  test_harness_hardening.py  test_live_benchmark.py  test_loop_detector.py  test_model_router.py  test_orchestration_e2e.py  test_phase0_scanning.py  test_planner_resilience.py  test_python_correctness_skill.py  test_quality_detector.py  test_quality_render_side_effect.py  test_review_task_splitting.py  test_security_categories.py  test_semantic_diff.py  test_skill_loading.py  test_specs.py  test_state.py  test_typescript_correctness_skill.py  test_unified_diff_mapping.py  (+6 more)
cross_pr_live/: account_labels.py  (+3 more)
(+194 files in other folders)
