[project]
name = "reviewforge"
version = "0.2.0"
description = "AI multi-agent code review system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "cryptography>=44.0",  # GitHub webhook signature verification
    "aiosqlite>=0.20",     # async SQLite for review history
]

# PEP 735 dependency group — installed by `uv sync` by default (unlike
# optional-dependencies extras, which CI's `uv sync` would skip → pytest/ruff missing).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
reviewforge = "reviewforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewforge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# app.py 在导入前调用 logging.basicConfig（让被导入库的 logger 继承配置），属有意为之。
"src/reviewforge/app.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
